--- a/src/pages/Announces/style.css
+++ b/src/pages/Announces/style.css
@@ -5,4 +5,12 @@
 
 .btn-enviar{
     background-color: blueviolet;
+    padding: 10px;
+    border-radius: 10px;
+    width: 90px;
+}
+
+.btn-enviar:hover{
+    background-color: blueviolet;
+    
 }
