--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -37,3 +37,48 @@
     font-size: 20px;
     color: #4F4F4F;
 }
+
+.image{
+    position: relative;
+    cursor: pointer;
+}
+
+.image__overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 99%;
+    height: 99%;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-family: "Quicksand", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+
+.image__overlay > *{
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+
+.image__overlay:hover{
+    opacity: 1;
+}
+
+.image__overlay:hover > *{
+    transform: translateY(0);
+}
+
+.image__title{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.image__description{
+    font-size: 1.25em;
+    margin-top: 0.25em;
+}
